--- a/_posts/2019-07-04-gctf2019-gLotto.md
+++ b/_posts/2019-07-04-gctf2019-gLotto.md
@@ -10,9 +10,9 @@ description: I think I got a very unique solution to a ctf challenge by google i
 
 ### Intro
 
-So this was a challenge for me. A full 2 day challenge I managed to solve 1 hour before the CTF was over. A huge emotional rolercoster but I guess it was worth it.
+So this was a challenge for me. A full 2 day challenge I managed to solve 1 hour before the CTF was over. A huge emotional roller coaster but I guess it was worth it.
 
-At a glimpse I thought that the challenge was going to be about reversing some PRNG in order go guess the upcomming numbers. I had some experience with this so I though I'll give it a go. I guess I couldn't be more wrong than that...
+At a glimpse I thought that the challenge was going to be about reversing some PRNG in order to guess the upcoming numbers. I had some experience with this so I though I'll give it a go. I couldn't be more wrong than that...
 
 The source code is found at https://glotto.web.ctfcompetition.com/?src 
 
@@ -20,7 +20,7 @@ The source code is found at https://glotto.web.ctfcompetition.com/?src
 
 (This part does not add to much but was taken in to consideration later)
 
-Since my first assumpion was that I had to reverse some PRNG I started looking at the crypto function.
+Since my first assumption was that I had to reverse some PRNG I started looking at the crypto function.
 
 ```php
 function gen_winner($count, $charset='0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ')
@@ -46,7 +46,7 @@ This function might not seem to be vulnerable assuming openssl_random_pseudo_byt
 
 ### SQL Injection
 
-Checking out the code, its clear that if not a vulnerability, there is at least something interesting is going on here
+Checking out this part of the code, its clear that if not a vulnerability, there is at least something interesting going on
 
 ```php
 $db->query("SET @lotto = '$winner'");
@@ -86,22 +86,22 @@ order0=date` = 1, (select case when (SUBSTR(@lotto,1,1)=CHAR(0x30)) then 1 else 
 
 If the first character is actually a `'0'` character, the database will parse the query and continue execution. If it is not, it will fail resulting in a blank page.
 
-This way some information can be leaked. On average 1/36 requests should match the byte we are looking for. However, using the bias discussed at the beginning, we can get slighly higher odds of 3.125/100.
+This way some information can be leaked. On average 1/36 requests should match the byte we are looking for. However, using the bias discussed at the beginning, we can get slightly higher odds of 3.125/100.
 
 ### Leak strategy
 
-Normally, with a blind injection, one can easily use some time delay or some parts of the response to get answers to binary questions. Then using such questions, information can be leaked such as our variable. This however needs to be done byte by byte, over a few houndred requests. Unfortunately this is not possible since the `winner` (`@lotto` in the database) variable is randomised after each request.
+Normally, with a blind injection, one can easily use some time delay or some parts of the response to get answers to binary questions. Then using such questions, information can be leaked such as our variable. This however needs to be done byte by byte, over a few hundred requests. Unfortunately this is not possible since the `winner` (`@lotto` in the database) variable is randomized after each request.
 
 It is clear that this will never be a reasonable approach, so another method will have to be used.
 
 So listing down what we have got:
 1. Target is in `@lotto` variable in the database
 2. Blind SQL injection in `ORDER BY` of each column
-3. Target variable `@lotto` is randomised on each request
+3. Target variable `@lotto` is randomized on each request
 
 Things look bad already, and this is because of point number 3. So lets make things a bit worse!
 
-Currently, the only way we can leak information is either using the blind method which won't get us far for the reasone discussed above, or by manipulating the order of the three tables.
+Currently, the only way we can leak information is either using the blind method which won't get us far for the reason discussed above, or by manipulating the order of the three tables.
 
 The information we are looking to leak is of around 62 bits
 ```python
@@ -119,7 +119,7 @@ combined = march*april*may*june
 math.log(combined,2)
 50.652511557325305
 ```
-which is about 11.5 bits short of what we need. Let alone the complexity of encoding things in the order of the fields(which by the time I had no idea of any algorithms to handle this).
+which is about 11.5 bits short of what we need. Let alone the complexity of encoding things in the order of the fields (which by the time I had no idea of any algorithms to handle this).
 
 Never the less, having little hope other than this, I had to figure out what ways I could use to encode data into a permutation. After researching around, I found an encoding called lehmer encoding which was doing exactly what I wanted.
 
@@ -141,27 +141,27 @@ permutation.Permutation(1, 2, 3, 5, 4)
 
 This might not be the correct way of using the library but it seems to be doing what we need. Encode all permutations of a set into an integer and decode an integer into all possible permutations. Finally some good news!
 
-Aaaand no... The bad news (at least for me) strike rigth back.
+Aaaand no... The bad news (at least for me) strike right back.
 
 * https://en.wikipedia.org/wiki/Lehmer_code
 * https://2ality.com/2013/03/permutations.html (section 3.2)
 
-The algorithm is quiet complex, especially the conversion from the lehmer code to an interger which is a recursive function... Knowing barely the basics of SQL to perform some injections, thats clearly not for me.
+The algorithm is quiet complex, especially the conversion from the lehmer code to an integer which is a recursive function... Knowing barely the basics of SQL to perform some injections, thats clearly not for me.
 
-At this moment I am about to run out of time and things are far from clear. I am thinking of other techniques I can use to encode data, such as leaking one byte using a sleep function. So I could encode each byte into a number and then sleep for as many sencods as that number is, the measure the delay get that byte. Its a good idea for one extra byte but... the server timeouts after 6 seconds or so, which makes it harder, plus it will only add one byte. That is FAR from the 12 bytes I need.
+At this moment I am about to run out of time and things are far from clear. I am thinking of other techniques I can use to encode data, such as leaking one byte using a sleep function. So I could encode each byte into a number and then sleep for as many seconds as that number is, then measure the delay and leak that byte. Its a good idea for one extra byte but... the server timeouts after 6 seconds or so, which makes it harder, plus it will only add one byte. That is FAR from the 12 bytes I need.
 
-My brain also tries to figure out ways to encode more information in the same amount of orderings which I have no idea why its doing so, since there is no possible way...
+My brain also tries to figure out ways to encode more information in the same amount of orderings without my control, which I have no idea why, since there is no possible way of doing so and it knows it very well...
 
 I got to the point where I thought all was lost for me and my lack of SQL skills would not allow me to even get close to solving this. I was almost convinced that it was over and that I should just stop wasting time. At this point I already lost most of my weekend. (Including doing a lot more that I did not mention here).
 
-I left my computer for a while and once I came back my eye fall onto a function that I saw over and over while researching but never though of its value. That is the rand function. The rand function in SQL can be used to order entries in a random order. In other words permute the bytes in a random order. The only thing missing is a way to control the permutation, and that can ofcourse be done using the seed value!
+I left my computer for a while and once I came back my eyes fall onto a function that I saw over and over while researching but never though of its value. That is the rand function. The rand function in SQL can be used to order entries in a random order. In other words permute the bytes in a random order. The only thing missing is a way to control the permutation, and that can of course be done using the seed value!
 
 The plan is now clear. Use the integer that is to be encoded into a permutation as the seed to the rand function. Then decode the permutation somehow, and leak the value needed!
 
 
 ### Encode bytes
 
-Now to begin, the bytes need to be encoded into integers that are to be given to the rand function. The encoding that will be used is:
+Now to begin, the bytes need to be encoded into integers and then given to the rand function. The encoding that will be used is:
 * Digits are mapped to there respective number
   * i.e. '0' is mapped to 0, '1' is mapped to 1 and so on
 * Letters are mapped from 'A' to 'Z' starting where digits left of
@@ -202,7 +202,7 @@ So here we can encode 4 of our bytes into a single integer. For example the byte
 
 ### Decode bytes
 
-Decoding is quite interesting and can defenately be optimised a lot. However, it wasn't, mainly due to the complexity and the fact that I only needed this to work once. I didn't even consider writting a writeup about this so I never though anyone would actually look at what I did. 
+Decoding is quite interesting and can definitely be optimized a lot. However, it wasn't! Mainly due to the complexity and the fact that I only needed this to work once. I didn't even consider writing a writeup about this so I never though anyone would actually look at what I did. 
 
 So... I actually did it in a very (lets call it) unelegant way... I made a clone of the database locally and iterated over the possible integer values. As soon as the returned order matched the order I was observing in the response I assume that this was the integer used. This works great for small numbers, up to lets say 2 or even 3 bytes, however when I have to decode 4 bytes this can take a while. In any case, I had some plans to optimise this but those never actually happened since I got the flag before the need came up.
 
@@ -289,7 +289,7 @@ c2 = get_char(c2n)
 
 ### Combinations per table
 
-The question that arrises now is, how many bytes should be encoded in each permutation? This is not a straight forward question actually, and requires some basic calculations in order to figure out.
+The question that arises now is, how many bytes should be encoded in each permutation? This is not a straight forward question actually, and requires some basic calculations in order to figure out.
 
 #### Max capacity of permutations
 
@@ -336,7 +336,7 @@ rand(
 ), --`date
 ```
 
-Now moving to March, it is quite obvious that we get a lot of coverage by encoding 3 bytes (40320/46656) in there. That will have a success rate of 86.4% which is acceptable. Trying to encode anothe byte would through the success rate down to about 2.4% which is to low.
+Now moving to March, it is quite obvious that we get a lot of coverage by encoding 3 bytes (40320/46656) in there. That will have a success rate of 86.4% which is acceptable. Trying to encode another byte would through the success rate down to about 2.4% which is to low.
 
 ```sql
 date` = 1,
@@ -349,7 +349,7 @@ rand(
 
 Up to this point we can leak 6 bytes with about 57.6% success rate. We still need another 6 bytes though. 
 
-The last table ordering we have is april. In this case we need to squize as much as possible as we are still half way through. If we choose to encode 3 bytes (362880/46656) we get 100% success rate (again unless we have conflicts) but this seems like a big waste. Trying to encode 4 bytes (362880/1679616) would result in 21.6% success rate. This is the highest percentage observed for an extra byte.
+The last table ordering we have is april. In this case we need to squeeze as much as possible as we are still half way through. If we choose to encode 3 bytes (362880/1679616) we get 100% success rate (again unless we have conflicts) but this seems like a big waste. Trying to encode 4 bytes (362880/1679616) would result in 21.6% success rate. This is the highest percentage observed for an extra byte.
 
 ```sql
 date` = 1,
@@ -370,7 +370,7 @@ This is of course not enough. This would require us to brute force two bytes whi
 
 One option to leak the last two bytes would be to encode partial bytes in the orderings. For example break a byte into 6 bits and split those across the other encodings. This might work but requires quite some effort and we should keep in mind that the information that can be encoded in the orderings is less that what we need to encode. Of course, due to the reduced success rate, there is still space to encode but that gets complicated quickly.
 
-So lets look at some other option which we already touched uppon partly. We can use our blind SQL injection to bruteforce the GET method until two bytes match some values we set. We could for example modify the June random function to look like this. 
+So lets look at some other option which we already touched upon partly. We can use our blind SQL injection to brute-force the GET method until two bytes match some values we set. We could for example modify the June random function to look like this. 
 
 ```sql
 date` = 1,
@@ -381,14 +381,14 @@ rand(
 ), --`date
 ```
 
-Here the GET request will fail (return blank page) unless byte number 12 is set to '0' and byte number 10 is set to '1'. Again those values are chosen since they are slightly more likely to occure as discussed at the beginning.
+Here the GET request will fail (return blank page) unless byte number 12 is set to '0' and byte number 10 is set to '1'. Again those values are chosen since they are slightly more likely to occur as discussed at the beginning.
 
-This will happen about once every 1296 requests. Adding an extra byte would make this happen once every 46656 requets. Since we don't need more than 2 bytes to have a success rate of 12.4% we can just stay with 2 bytes and significantly reduce the bruteforce space.
+This will happen about once every 1296 requests. Adding an extra byte would make this happen once every 46656 requests. Since we don't need more than 2 bytes to have a success rate of 12.4% we can just stay with 2 bytes and significantly reduce the brute-force space.
 
-Requests seemed to take around half a second for me, so I decided to parallelise the bruteforcing with a bunch of threads.
+Requests seemed to take around half a second for me, so I decided to parallelize the brute-forcing with a bunch of threads.
 
 
-### Putting it all togeter
+### Putting it all together
 
 ```python
 ##!/bin/python
@@ -602,11 +602,11 @@ for t in thread_list:
 
 ### Results
 
-After a few tries the flag is obtained. Keep in mind that finding winner 1 can take some time since the seed space is quite big. Some space/time tradeoff or an implementation of the mysql random function in python could work around this issue by speeding everything up by a lot, however as mentinoned earlier it was not worth it, we only need to get this to work a single time.
+After a few tries the flag is obtained. Keep in mind that finding winner 1 can take some time since the seed space is quite big. Some space/time tradeoff or an implementation of the mysql random function in python could work around this issue by speeding everything up by a lot, however as mentioned earlier it was not worth it, we only need to get this to work a single time.
 
-The success rate seems to lower than calculated so maybe some factor was left out, maybe there is some bug in the code, or maybe its just the random behaviour.
+The success rate seems lower than calculated so maybe some factor was left out, maybe there is some bug in the code, or maybe its just the random behaviour.
 
-![CTF{3c2ca0d10a5d4bf44bc716d669e074b2}](screenshot.png)
+![CTF{3c2ca0d10a5d4bf44bc716d669e074b2}](/assets/imgs/2019-07-04-gctf2019-gLotto/screenshot.png)
 
 ### Flag
 
